@@ -276,7 +276,10 @@ end
   <li><a href="https://github.com/vpsfreecz/haveapi-client" target="_blank">Ruby library and CLI</a></li>
   <li><a href="https://github.com/vpsfreecz/haveapi-client-js" target="_blank">JavaScript</a></li>
   <li><a href="https://github.com/vpsfreecz/haveapi-client-php" target="_blank">PHP</a></li>
-  <li><a href="https://github.com/vpsfreecz/haveapi-webui" target="_blank">Generic web interface</a></li>
+  <li>
+    <a href="https://github.com/vpsfreecz/haveapi-webui" target="_blank">Generic web interface</a>
+    (<a href="https://webui.haveapi.org/v<%= version %>/#<%= escape(base_url) %>" target="_blank">connect to this API</a>)
+  </li>
   <li><a href="https://github.com/vpsfreecz/haveapi-fs" target="_blank">FUSE-based file system</a></li>
 </ul>
 
