@@ -61,3 +61,16 @@
       <% render_resource_nav(resource, info) %>
   <% end %>
 </ul>
+
+<h1>Browser</h1>
+<p>
+  Browse this API with <a href="https://github.com/vpsfreecz/haveapi-webui">haveapi-webui</a>:
+</p>
+<p>
+  <a
+    href="https://webui.haveapi.org/v<%= version %>/#<%= urlescape(base_url) %>"
+    class="btn btn-default"
+    target="_blank">
+    Connect
+  </a>
+</p>
